Fix desctop overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -519,6 +519,7 @@ bottom: 0;
 	background: #FFFFFF;
 	min-width: 560px;
 	min-height: 100%;
+	width: 100%;
 	height: -webkit-max-content;
 	height: -moz-max-content;
 	height: max-content;
@@ -748,8 +749,6 @@ bottom: 0;
 }
 #contact .popup_inner {
 	height: 100%;
-	max-width: 560px;
-	width: 40%;
 }
 .product-card {
 	width: 100%;
@@ -780,7 +779,6 @@ bottom: 0;
 	margin: auto; 
 	padding: 24px;
 	width: 100%;
-	height: 100%;
 	min-height: calc(100vh - 40px);
 }
 .product-card .tsb-cont {
@@ -805,6 +803,7 @@ bottom: 0;
 	   object-fit: cover;
 }
 .product-card .product_content {
+	min-height: calc(66vh - 40px - 48px);
 	padding: 32px 26px 24px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -905,7 +904,7 @@ bottom: 0;
 	padding: 14px 0;
 }
 .product-card .popup_confirm {
-	margin: 0;
+	margin: auto 0 0;
 }
 #basket {
 	width: 0;
@@ -924,10 +923,6 @@ bottom: 0;
 }
 #basket.show {
 	width: 100%;
-}
-#basket .popup_inner {
-	max-width: 560px;
-	width: 40%;
 }
 #basket .popup_title {
 	margin-bottom: 1.6vh;
@@ -1112,7 +1107,7 @@ bottom: 0;
 
 @media screen and (max-width: 1024px) {
 	.popup_inner {
-            padding: 22px 24px 24px;
+        padding: 22px 24px 24px;
 	}
 	.popup_title {
 	    font-size: 32px;
@@ -1120,6 +1115,7 @@ bottom: 0;
 	}
 	.product-card .product_content {
 	    padding: 16px 0;
+	    min-height: calc(66vh - 40px - 46px);
 	}
 }
 
@@ -1305,7 +1301,6 @@ bottom: 0;
 	}
 	.popup_inner {
 		width: 100%;
-		max-width: 400px;
 		min-width: 320px;
 		padding-bottom: 32px 16px;
 	}
@@ -1327,7 +1322,6 @@ bottom: 0;
 	}
 	.product-card .popup_inner {
 		width: 100%;
-		max-width: 520px;
 		height: auto;
 	}
 	.product-card .product_image {
@@ -1335,6 +1329,7 @@ bottom: 0;
 	}
 	.product-card .product_content {
 		padding: 16px;
+		min-height: calc(73vh - 32px - 48px);
 	}
 	.product-card .product_title {
 		margin-bottom: 16px;
@@ -1390,9 +1385,6 @@ bottom: 0;
 		line-height: 15px;
 		letter-spacing: 0.08em;
 		padding: 17px 16px 16px;
-	}
-	#basket .popup_inner {
-		max-width: 400px;
 	}
 	#basket .popup_subtitle {
 		margin-bottom: 16px;
@@ -1453,7 +1445,6 @@ bottom: 0;
 		line-height: 30px;
 	}
 	#contact .popup_inner {
-	    max-width: 400px;
     	width: 100%;
 	}
 	.sea.right .sea_bottom .contact {
@@ -1488,6 +1479,9 @@ bottom: 0;
 	.product-card .popup_inner {
 		min-height: 100vh;
 		padding: 0;
+	}
+	.product-card .product_content {
+		min-height: 73vh;
 	}
 }
 
